<resources>
    <string name="app_name">NBA</string>
    <string name="teamA">Raptors</string>
    <string name="teamB">Warriors</string>
    <string name="_3pts">+3 Points</string>
    <string name="_2pts">+2 Points</string>
    <string name="_1pts">Free Throw</string>
    <string name="reset">Reset</string>
    <string name="_zero">0</string>
    <string name="time">Time Left: 00:00</string>
    <string name="start">Start</string>
    <string name="game">Game starts\'s in few seconds.</string>
    <string name="quote">Quote</string>
    <string name="quotes">Talent wins games, but teamwork and intelligence wins championships.</string>

</resources>
