<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/main">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/logo"
            android:layout_toRightOf="@id/logo"
            android:fontFamily="sans-serif-condensed"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
            android:textSize="55sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/nba_logo" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:onClick="reset"
            android:text="@string/reset"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="3"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/raptors"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/raptors"
                android:text="@string/teamA"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_zero"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"

                android:background="@color/main"
                android:onClick="addThreeTeamA"
                android:text="@string/_3pts"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"

                android:background="#d4d8d8"
                android:onClick="addTwoTeamA"
                android:text="@string/_2pts"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/main"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"

                android:background="@color/main"
                android:onClick="addOneTeamA"
                android:text="@string/_1pts"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/warriors"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/warriors"
                android:text="@string/teamB"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/_zero"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_b3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"

                android:background="#d4d8d8"
                android:onClick="addThreeTeamB"
                android:text="@string/_3pts"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/main"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_b2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"

                android:background="@color/main"
                android:onClick="addTwoTeamB"
                android:text="@string/_2pts"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"

                android:background="#d4d8d8"
                android:onClick="addOneTeamB"
                android:text="@string/_1pts"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/main"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/counter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/time"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />


        <Button
            android:id="@+id/start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/main"
            android:onClick="counter"
            android:text="@string/start"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/game_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/game"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quote"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/quotes"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    </LinearLayout>
</ScrollView>